--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@egjs/react-infinitegrid": "3.2.5",
+    "axios": "^0.21.1",
+    "dot-prop-immutable": "2.1.0",
+    "graphql": "15.5.1",
+    "graphql-request": "3.4.0",
+    "http-status-codes": "^2.1.4",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.3.1",
+    "swr": "0.5.6"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
